# aws-instance-type-comparator

./: setup.cfg
src/aws_instance_type_comparator/: instance_type.py
tests/: test_instance_size.py
