[metadata]
name = aws-instance-type-comparator
version = 0.0.1a1
descripton = AWS instance type comparator
author = MH35
author_email = mh35jp@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.11

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.extras_require]
dev =
    pylint >= 2.15.10
    pycodestyle >= 2.10.0
    pydocstyle >= 6.3.0
    mypy >= 0.991
    flake8 >= 6.0.0
    flake8-annotations >= 3.0.0
    flake8-black >= 0.3.6
    flake8-builtins >= 2.1.0
    flake8-comprehensions >= 3.10.1
    flake8-docstrings >= 1.7.0
    flake8-isort >= 6.0.0
    pep8-naming >= 0.13.3
    bandit >= 1.7.4
    black >= 23.1.0
    isort >= 5.12.0
test =
    pytest >= 7.2.1
    pytest-cov >= 4.0.0
doc =
    Sphinx >= 6.1.3
